fix label text being too big of RWD smallest(16em 320px)

--- a/week-3/public/css/main.css
+++ b/week-3/public/css/main.css
@@ -136,7 +136,7 @@ h2 {
   .form__title {
     font-size: 2.2rem; }
   .form__field label {
-    font-size: 3.2rem; }
+    font-size: 2.8rem; }
   .form__btn {
     padding: 1.8rem 5.5rem;
     font-size: 1.8rem; } }
