--- a/week-3/public/sass/_form.scss
+++ b/week-3/public/sass/_form.scss
@@ -126,7 +126,7 @@
 
     &__field {
       label {
-        font-size: 3.2rem;
+        font-size: 2.8rem;
       }
     }
 
